<resources>
    <string name="app_name">Coffee Order System</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="order_number">Order Number : %d</string>
    <string name="order_time">Order Time : %s</string>
    <string name="order_account">Order Account : %s</string>
    <string name="total_items">Total Items : %d</string>
    <string name="total_price">Total Price : %d TWD</string>
    <string name="ice_sugar">Ice Sugar * %d</string>
    <string name="ice_no_sugar">Ice No Sugar * %d</string>
    <string name="hot_sugar">Hot Sugar * %d</string>
    <string name="hot_no_sugar">Hot No Sugar * %d</string>
</resources>
