<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height_big"
    android:id="@+id/item_order_list_layout"
    android:layout_marginVertical="1dp">

    <TextView
        android:id="@+id/item_order_list_textview_status"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_order_list_textview_order_number"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:singleLine="true"
        android:text="@string/order_number"
        app:layout_constraintEnd_toStartOf="@+id/item_order_list_textview_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_order_list_textview_order_Time"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:singleLine="true"
        android:text="@string/order_time"
        app:layout_constraintEnd_toStartOf="@+id/item_order_list_textview_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_order_list_textview_order_number" />

    <TextView
        android:id="@+id/item_order_list_textview_order_Account"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:singleLine="true"
        android:text="@string/order_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_order_list_textview_order_Time" />

    <TextView
        android:id="@+id/item_order_list_textview_total_items"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:maxLength="20"
        android:singleLine="true"
        android:text="@string/total_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_order_list_textview_total_price"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_order_list_textview_total_price"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:maxLength="20"
        android:singleLine="true"
        android:text="@string/total_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
 />

</android.support.constraint.ConstraintLayout>