<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_order_detail_context_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="1dp">

    <TextView
        android:id="@+id/item_order_detail_context_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="15dp"
        android:text="title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_order_detail_context_textview_ice_sugar"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:text="@string/ice_sugar"
        app:layout_constraintStart_toStartOf="@+id/item_order_detail_context_textview_title"
        app:layout_constraintTop_toBottomOf="@+id/item_order_detail_context_textview_title" />

    <TextView
        android:id="@+id/item_order_detail_context_textview_ice_no_sugar"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:text="@string/ice_no_sugar"
        app:layout_constraintStart_toStartOf="@+id/item_order_detail_context_textview_title"
        app:layout_constraintTop_toBottomOf="@+id/item_order_detail_context_textview_ice_sugar" />

    <TextView
        android:id="@+id/item_order_detail_context_textview_hot_sugar"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:text="@string/hot_sugar"
        app:layout_constraintStart_toStartOf="@+id/item_order_detail_context_textview_title"
        app:layout_constraintTop_toBottomOf="@+id/item_order_detail_context_textview_ice_no_sugar" />

    <TextView
        android:id="@+id/item_order_detail_context_textview_hot_no_sugar"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hot_no_sugar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_order_detail_context_textview_title"
        app:layout_constraintTop_toBottomOf="@+id/item_order_detail_context_textview_hot_sugar" />

</android.support.constraint.ConstraintLayout>